--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.1.0",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
     "amqplib": "^0.10.3",
     "auto-bind": "^4.0.0",
@@ -21,7 +22,8 @@
     "joi": "^17.9.2",
     "nanoid": "^3.1.20",
     "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "eslint": "^8.46.0",
